--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-05  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* configure.in: Added "ja" to ALL_LINGUAS.
+
 2003-03-27  Evandro Fernandes Giovanini <evandrofg@ig.com.br>
 
 	* configure.in (ALL_LINGUAS): Added "pt_BR".
