--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-11  Abel Cheung  <maddog@linux.org.hk>
+
+	* configure.in: Added "az" to ALL_LINGUAS.
+
 2001-12-20 Naba Kumar <kh_naba@yahoo.com>
 
 	* .cvsignore
