Added initial Slovak translation.
2003-05-13  Marcel Telka  <marcel@telka.sk>

	* sk.po: Added initial Slovak translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Marcel Telka  <marcel@telka.sk>
+
+	* sk.po: Added initial Slovak translation.
+
 2003-04-05  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Added Japanese translation by
