--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-13  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
+
+	* configure.in: Updated required versions for dependencies.
+
 2003-05-13  Marcel Telka  <marcel@telka.sk>
 
 	* configure.in (ALL_LINGUAS): Added "sk".
