--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-28  Danilo Šegan  <dsegan@gmx.net>
+
+	* configure.in (ALL_LINGUAS): Added "sr" and "sr@Latn".
+
 2003-05-13  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
 
 	* configure.in: Updated required versions for dependencies.
