--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-28  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Added Serbian translation by Serbian team 
+	(Prevod.org).
+
 2003-05-13  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Added initial Slovak translation.
