--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-19  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation.
+
 2003-05-14  Guntupalli Karunakar  <karunakar@freedomink.org>
 
 	* ml.po: Added Malayalam translation by
