--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-23  Vincent van Adrighem  <V.vanAdrighem@dirck.mine.nu>
+
+	* nl.po: Dutch translation updated by Kees van den Broek.
+
 2003-06-19  Alessio Frusciante  <algol@firenze.linux.it>
 
 	* it.po: Updated Italian translation.
