--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-07-05  Valek Filippov  <frob@df.ru>
+
+	* ru.po: Updated russian translation.
+
 2003-07-02  Danilo Šegan  <dsegan@gmx.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation by Serbian team 
