--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
-Dave Camp  <dave@ximian.com>
-Neil Hodgson  <neilh@scintilla.org> (Scintilla Widget)
+Dave Camp  <dave at ximian com>
+Neil Hodgson  <neilh at scintilla org> (Scintilla Widget)
+Gustavo Giráldez  <gustavo giraldez at gmx net> (GdlDock)
+
