Added release tags

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+=== GDL 0.4.0 ===
+	
 2003-08-06  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
 
 	* configure.in: Bumped version number for new release.
