--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-07  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
+
+	* NEWS: (late) update.
+
 === GDL 0.4.0 ===
 	
 2003-08-06  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
