--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-10  Wang Jian  <lark@linux.net.cn>
+
+	* configure.in: Added "zh_CN" to ALL_LINGUAS.
+
 2003-08-07  Gustavo Giraldez  <gustavo.giraldez@gmx.net>
 
 	* NEWS: (late) update.
