--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2003-08-10  Wang Jian  <lark@linux.net.cn>
+
+	* zh_CN.po: Added Simplified Chinese translation.
+
 === GDL 0.4.0 ===
 
 2003-07-25  Pablo Saratxaga  <pablo@mandrakesoft.com>
