--- a/po/sr@Latn.po
+++ b/po/sr@Latn.po
@@ -8,8 +8,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: gdl\n"
-"POT-Creation-Date: 2003-06-14 04:07+0200\n"
-"PO-Revision-Date: 2003-05-22 18:40+0200\n"
+"POT-Creation-Date: 2003-08-13 03:49+0200\n"
+"PO-Revision-Date: 2003-08-13 03:49+0200\n"
 "Last-Translator: Aleksandar Urošević <urke@users.sourceforge.net>\n"
 "Language-Team: Serbian (sr) <serbiangnome-lista@nongnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -112,6 +112,8 @@ msgid ""
 "Attempting to add a widget with type %s to a %s, but it can only contain one "
 "widget at a time; it already contains a widget of type %s"
 msgstr ""
+"Pokušava da doda element tipa %s u %s, ali on može da sadrži samo jedan "
+"element; već sadrži element tipa %s"
 
 #: gdl/gdl-dock-item.c:1149
 #, c-format
@@ -133,60 +135,59 @@ msgstr "Zaključaj"
 msgid "Attempt to bind an unbound item %p"
 msgstr "Pokušaj ugradnje bezgranične stavke %p"
 
-#: gdl/gdl-dock-layout.c:125
+#: gdl/gdl-dock-layout.c:126
 msgid "Master"
 msgstr "Glavno"
 
-#: gdl/gdl-dock-layout.c:126
+#: gdl/gdl-dock-layout.c:127
 msgid "GdlDockMaster object which the layout object is attached to"
-msgstr ""
+msgstr "GdlDockMaster objekat za koji je privezan objekat rasporeda"
 
-#: gdl/gdl-dock-layout.c:133
+#: gdl/gdl-dock-layout.c:134
 msgid "Dirty"
 msgstr "Prljavo"
 
-#: gdl/gdl-dock-layout.c:134
+#: gdl/gdl-dock-layout.c:135
 msgid "True if the layouts have changed and need to be saved to a file"
 msgstr ""
-
-#: gdl/gdl-dock-layout.c:447
-msgid "You must provide a name for the layout"
-msgstr "Morate definisati naziv rasporeda"
+"Postavljeno ukoliko su rasporedi izmenjeni i treba ih sačuvati u datoteku"
 
 #. FIXME: pop up an error dialog
-#: gdl/gdl-dock-layout.c:625
+#: gdl/gdl-dock-layout.c:565
 #, c-format
 msgid "Could not load layout user interface file '%s'"
 msgstr "Ne mogu učitati fajl sa rasporedom korisničkog sučelja „%s‟"
 
-#: gdl/gdl-dock-layout.c:680
+#: gdl/gdl-dock-layout.c:620
 msgid "Visible"
 msgstr "Vidljivo"
 
-#: gdl/gdl-dock-layout.c:687
+#: gdl/gdl-dock-layout.c:627
 msgid "Item"
 msgstr "Stavka"
 
-#: gdl/gdl-dock-layout.c:737 gdl/gdl-dock-object.c:120
+#: gdl/gdl-dock-layout.c:710 gdl/gdl-dock-object.c:120
 msgid "Name"
 msgstr "Naziv"
 
-#: gdl/gdl-dock-layout.c:776 gdl/layout.glade.h:2
+#: gdl/gdl-dock-layout.c:743 gdl/layout.glade.h:1
 msgid "Dock items"
 msgstr "Stavke panela"
 
-#: gdl/gdl-dock-layout.c:782 gdl/layout.glade.h:4
+#: gdl/gdl-dock-layout.c:749 gdl/layout.glade.h:3
 msgid "Saved layouts"
 msgstr "Sačuvaj raspored"
 
-#: gdl/gdl-dock-layout.c:824
+#: gdl/gdl-dock-layout.c:791
 #, c-format
 msgid ""
 "While loading layout: don't know how to create a dock object whose nick is '%"
 "s'"
 msgstr ""
+"Prilikom učitavanja rasporeda: ne ume da napravi objekat za prilepljivanje čiji "
+"je nadimak „%s“"
 
-#: gdl/gdl-dock-layout.c:1303
+#: gdl/gdl-dock-layout.c:1270
 msgid "Layout managment"
 msgstr "Upravljanje rasporedom"
 
@@ -203,6 +204,9 @@ msgid ""
 "If is set to 1, all the dock items bound to the master are locked; if it's "
 "0, all are unlocked; -1 indicates inconsistency among the items"
 msgstr ""
+"Ukoliko je postavljeno na 1, svi objekti za pripajanje vezani za glavni su "
+"zaključani; ukoliko je 0, svi su otključani; -1 označava nedoslednost među "
+"stavkama"
 
 #: gdl/gdl-dock-master.c:730
 #, c-format
@@ -210,6 +214,8 @@ msgid ""
 "master %p: unable to add object %p[%s] to the hash.  There already is an "
 "item with that name (%p)."
 msgstr ""
+"glavni %p: ne može da doda objekat %p[%s] u heš tabelu.  Već postoji stavka "
+"sa tim imenom (%p)."
 
 #: gdl/gdl-dock-master.c:895
 #, c-format
@@ -217,6 +223,8 @@ msgid ""
 "The new dock controller %p is automatic.  Only manual dock objects should be "
 "named controller."
 msgstr ""
+"Novi upravljač pripajanjem %p je automatski.  Samo ručni objekti za pripajanje "
+"treba da budu označeni kao upravljači."
 
 #: gdl/gdl-dock-notebook.c:134
 msgid "Page"
@@ -252,6 +260,8 @@ msgid ""
 "Call to gdl_dock_object_dock in a dock object %p (object type is %s) which "
 "hasn't implemented this method"
 msgstr ""
+"Poziv funkciji gdl_dock_object_dock u objektu za pripajanje %p (tip objekta "
+"je %s) koji ne sadrži ovu metodu"
 
 #: gdl/gdl-dock-object.c:534
 #, c-format
@@ -259,17 +269,22 @@ msgid ""
 "Dock operation requested in a non-bound object %p. The application might "
 "crash"
 msgstr ""
+"Pokušaj izvođenja operacije pripajanja u nepovezanom objektu %p. Program može "
+"da pukne"
 
 #: gdl/gdl-dock-object.c:541
 #, c-format
 msgid "Cannot dock %p to %p because they belong to different masters"
 msgstr ""
+"Ne može da pripoji %p na %p zato što pripadaju raznim glavnim objektima"
 
 #: gdl/gdl-dock-object.c:583
 #, c-format
 msgid ""
 "Attempt to bind to %p an already bound dock object %p (current master: %p)"
 msgstr ""
+"Pokušaj vezivanja na %p već vezanog objekta za pripajanje %p (trenutno glavni: "
+"%p)"
 
 #: gdl/gdl-dock-paned.c:134
 msgid "Position"
@@ -288,33 +303,37 @@ msgid ""
 "Whether the placeholder will stick to its host or move up the hierarchy when "
 "the host is redocked"
 msgstr ""
+"Da li će se ovaj čuvar mesta držati svog domaćina ili se premeštati u "
+"hijerarhiji kada se domaćin odvoji"
 
 #: gdl/gdl-dock-placeholder.c:135
 msgid "Host"
-msgstr ""
+msgstr "Domaćin"
 
 #: gdl/gdl-dock-placeholder.c:136
 msgid "The dock object this placeholder is attached to"
-msgstr ""
+msgstr "Objekat za pripajanje za koji je ovaj čuvar mesta vezan"
 
 #: gdl/gdl-dock-placeholder.c:143
 msgid "Next placement"
-msgstr ""
+msgstr "Sledeći raspored"
 
 #: gdl/gdl-dock-placeholder.c:144
 msgid ""
 "The position an item will be docked to our host if a request is made to dock "
 "to us"
 msgstr ""
+"Pozicija na koju će stavka biti pripojena domaćinu ako je učinjen zahtev za "
+"pripajanje nama"
 
 #: gdl/gdl-dock-placeholder.c:305
 msgid "Attempt to dock a dock object to an unbound placeholder"
-msgstr ""
+msgstr "Pokušaj pripajanja objekta za pripajanje nevezanom čuvaru mesta"
 
 #: gdl/gdl-dock-placeholder.c:419
 #, c-format
 msgid "Got a detach signal from an object (%p) who is not our host %p"
-msgstr ""
+msgstr "Primio je signal za odvajanje od objekta (%p) koji nije naš domaćin %p"
 
 #: gdl/gdl-dock-placeholder.c:440
 #, c-format
@@ -322,14 +341,16 @@ msgid ""
 "Something weird happened while getting the child placement for %p from "
 "parent %p"
 msgstr ""
+"Nešto čudno se dogodilo pri dobavljanju razmeštaja sadržanog elementa %p od "
+"sadržaoca %p"
 
 #: gdl/gdl-dock-tablabel.c:130
 msgid "Controlling dock item"
-msgstr ""
+msgstr "Upravljač elementom pripajanja"
 
 #: gdl/gdl-dock-tablabel.c:131
 msgid "Dockitem which 'owns' this tablabel"
-msgstr ""
+msgstr "Element za pripajanje koji je „vlasnik“ ove oznake lista"
 
 #: gdl/gdl-dock.c:177
 msgid "Floating"
@@ -337,11 +358,11 @@ msgstr "Plutajuće"
 
 #: gdl/gdl-dock.c:178
 msgid "Whether the dock is floating in its own window"
-msgstr ""
+msgstr "Da li element za pripajanje pluta u svom prozoru"
 
 #: gdl/gdl-dock.c:186
 msgid "Default title for the newly created floating docks"
-msgstr ""
+msgstr "Podrazumevani naslov za novonapravljene plutajuće objekte za pripajanje"
 
 #: gdl/gdl-dock.c:192
 msgid "Width"
@@ -349,7 +370,7 @@ msgstr "Širina"
 
 #: gdl/gdl-dock.c:193
 msgid "Width for the dock when it's of floating type"
-msgstr ""
+msgstr "Širina objekta za pripajanje kada je plutajući"
 
 #: gdl/gdl-dock.c:200
 msgid "Height"
@@ -357,36 +378,36 @@ msgstr "Visina"
 
 #: gdl/gdl-dock.c:201
 msgid "Height for the dock when it's of floating type"
-msgstr ""
+msgstr "Visin objekta za pripajanje kada je plutajući"
 
 #: gdl/gdl-dock.c:208
 msgid "Float X"
-msgstr ""
+msgstr "Plutajući X"
 
 #: gdl/gdl-dock.c:209
 msgid "X coordinate for a floating dock"
-msgstr ""
+msgstr "X koordinata plutajućeg objekta za pripajanje"
 
 #: gdl/gdl-dock.c:216
 msgid "Float Y"
-msgstr ""
+msgstr "Plutajući Y"
 
 #: gdl/gdl-dock.c:217
 msgid "Y coordinate for a floating dock"
-msgstr ""
+msgstr "Y koordinata plutajućeg objekta za pripajanje"
 
 #: gdl/gdl-dock.c:494
 #, c-format
 msgid "Dock #%d"
-msgstr ""
+msgstr "Pripajanje #%d"
 
 #: gdl/gdl-recent.c:136
 msgid "GConf key"
-msgstr ""
+msgstr "Gkonf ključ"
 
 #: gdl/gdl-recent.c:137
 msgid "The gconf key for storing the recent entries."
-msgstr ""
+msgstr "Gkonf ključ u koji se smeštaju nedavni unosi."
 
 #: gdl/gdl-recent.c:143
 msgid "Path"
@@ -394,7 +415,7 @@ msgstr "Putanja"
 
 #: gdl/gdl-recent.c:144
 msgid "The path to put the menu items."
-msgstr ""
+msgstr "Putanja za smeštanje stavki menija."
 
 #: gdl/gdl-recent.c:150
 msgid "Limit"
@@ -410,7 +431,7 @@ msgstr "TIp liste"
 
 #: gdl/gdl-recent.c:160
 msgid "The type with which the items will be numbered."
-msgstr ""
+msgstr "Tip kojim će se pobrojati stavke."
 
 #: gdl/gdl-recent.c:409
 #, c-format
@@ -425,53 +446,49 @@ msgstr "Veličina ikonice"
 msgid "Icon zoom"
 msgstr "Uvećanje ikonice"
 
-#: gdl/layout.glade.h:1
-msgid "*"
-msgstr "*"
-
-#: gdl/layout.glade.h:3
+#: gdl/layout.glade.h:2
 msgid "Layout Managment"
-msgstr ""
+msgstr "Upravljanje rasporedom"
 
-#: gdl/layout.glade.h:5
+#: gdl/layout.glade.h:4
 msgid "_Load"
 msgstr "_Učitaj"
 
-#: gdl/layout.glade.h:6
+#: gdl/layout.glade.h:5
 msgid "_Lock dock items"
 msgstr "_Zaključaj stavku dijaloga"
 
 #: symbol-browser-control/GNOME_Development_SymbolBrowser.server.in.h:1
 msgid "Factory for the Gnome Symbol Browser control."
-msgstr ""
+msgstr "Proizvodnja elementa za razgledanje Gnomovih simbola."
 
 #: symbol-browser-control/GNOME_Development_SymbolBrowser.server.in.h:2
 msgid "Gnome Symbol Browser Control"
-msgstr ""
+msgstr "Element za razgledanje Gnomovih simbola"
 
 #: symbol-browser-control/GNOME_Development_SymbolBrowser.server.in.h:3
 msgid "Gnome Symbol Browser Control Factory"
-msgstr ""
+msgstr "Proizvodnja elementa za razgledanje Gnomovih simbola"
 
 #: symbol-browser-control/GNOME_Development_SymbolBrowser.server.in.h:4
 msgid "Gnome Symbol Browser."
-msgstr ""
+msgstr "Razgledanje Gnomovih simbola."
 
 #: symbol-browser-control/gnome-symbol-browser.xml.h:1
 msgid "Goto Symbol"
-msgstr ""
+msgstr "Idi na simbol"
 
 #: symbol-browser-control/gnome-symbol-browser.xml.h:2
 msgid "Goto the displayed symbol"
-msgstr ""
+msgstr "Idi na prikazani simbol"
 
 #: symbol-browser-control/gnome-symbol-browser.xml.h:3
 msgid "Update Symbols"
-msgstr ""
+msgstr "Osveži simbole"
 
 #: symbol-browser-control/gnome-symbol-browser.xml.h:4
 msgid "Update the symbol tree"
-msgstr ""
+msgstr "Osveži stablo simbola"
 
 #: symbol-browser-control/gnome-symbol-browser.xml.h:5
 msgid "_Goto to symbol"
@@ -493,12 +510,12 @@ msgstr "Klase"
 #. ! tm_tag_class_t = 1, < Class declaration
 #: symbol-browser-control/symbol-browser.c:65
 msgid "Enums"
-msgstr ""
+msgstr "Pobroj"
 
 #. ! tm_tag_enum_t = 2, < Enum declaration
 #: symbol-browser-control/symbol-browser.c:66
 msgid "Enumerators"
-msgstr ""
+msgstr "Pobrojavanje"
 
 #. ! tm_tag_enumerator_t = 4, < Enumerator value
 #: symbol-browser-control/symbol-browser.c:67
@@ -528,7 +545,7 @@ msgstr "Metode"
 #. ! tm_tag_method_t = 128, < Class method (Java only
 #: symbol-browser-control/symbol-browser.c:72
 msgid "Namespaces"
-msgstr ""
+msgstr "Prostori imena"
 
 #. ! tm_tag_namespace_t = 256, < Namespace declaration
 #: symbol-browser-control/symbol-browser.c:73
@@ -548,7 +565,7 @@ msgstr "Strukture"
 #. ! tm_tag_struct_t = 2048, < Struct declaration
 #: symbol-browser-control/symbol-browser.c:76
 msgid "Typedefs"
-msgstr ""
+msgstr "Definicije tipova"
 
 #. ! tm_tag_typedef_t = 4096, < Typedef
 #: symbol-browser-control/symbol-browser.c:77
@@ -563,7 +580,7 @@ msgstr "Promenljive"
 #. ! tm_tag_variable_t = 16384, < Variable
 #: symbol-browser-control/symbol-browser.c:79
 msgid "ExternVars"
-msgstr ""
+msgstr "Spoljne promenljive"
 
 #. ! tm_tag_externvar_t = 32768, < Extern or forward declaration
 #: symbol-browser-control/symbol-browser.c:80
@@ -577,7 +594,7 @@ msgstr "MakroiSaArgumentima"
 
 #: symbol-browser-control/symbol-browser.c:369
 msgid "Tags"
-msgstr ""
+msgstr "Oznake"
 
 #: symbol-browser-control/symbol-browser.c:377
 #: symbol-browser-control/symbol-browser.c:387
@@ -643,8 +660,14 @@ msgstr "Postavljanje trenutnog fajla..."
 
 #: symbol-browser-control/test-symbol-browser.c:172
 msgid "Save file..."
-msgstr ""
+msgstr "Sačuvaj datoteku..."
 
 #: symbol-browser-control/test-symbol-browser.c:292
 msgid "Can't initialize bonobo!"
 msgstr "Ne mogu inicijalizovati bonobo!"
+
+#~ msgid "You must provide a name for the layout"
+#~ msgstr "Morate definisati naziv rasporeda"
+
+#~ msgid "*"
+#~ msgstr "*"
